--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 </a>
                                 <div>
                                     <a class="nav-link active signing fontcolor" href="#">🤝 Sign In/Up</a>
-                                    <a class="nav-link" href="#">📜 Listings</a>
+                                    <a class="nav-link" href="#">📜 Reading List</a>
                                     <a class="nav-link" href="#">🎙 Podcasts</a>
                                     <a class="nav-link" href="#">🎥 Videos</a>
                                     <a class="nav-link" href="#">🏷 Tags</a>
