--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Dashboard</a>
                     <a class="dropdown-item" href="#">Write a Post</a>
-                    <a class="dropdown-item" href="#">Reading list</a>
+                    <a class="dropdown-item">Reading list</a>
                     <a class="dropdown-item" href="#">Settings</a>
                     <a class="dropdown-item" href="#">Key Links</a>
                     <div class="dropdown-divider"></div>
@@ -110,7 +110,7 @@
                                 </a>
                                 <div>
                                     <a class="nav-link active signing fontcolor" href="#">🤝 Sign In/Up</a>
-                                    <a class="nav-link" href="#">📜 Reading List</a>
+                                    <a class="nav-link print-reading-list" href="#">📜 Reading List</a>
                                     <a class="nav-link" href="#">🎙 Podcasts</a>
                                     <a class="nav-link" href="#">🎥 Videos</a>
                                     <a class="nav-link" href="#">🏷 Tags</a>
@@ -248,25 +248,25 @@
                     <main class="col-12 col-md-8 col-lg-6">
                         <ul class="nav">
                             <h3 class="nav-post">Post</h3>
-                            <div class="nav">
+                            <div class="nav filters">
                                 <div class="menu-post">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Feed</a>
+                                        <a class="nav-link" id="filterFeed" href="#">Feed</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Week</a>
+                                        <a class="nav-link" id="filterWeek"  href="#">Week</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Month</a>
+                                        <a class="nav-link" id="filterMonth"  href="#">Month</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Year</a>
+                                        <a class="nav-link" id="filterYear"  href="#">Year</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Infinity</a>
+                                        <a class="nav-link" id="filterInfinity"  href="#">Infinity</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Latest</a>
+                                        <a class="nav-link" id="filterLatest" href="#">Latest</a>
                                     </li>
                                 </div>
                             </div>
