Added Search Bar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
             <form class="form-inline flex-grow-1 mr-1 mr-lg-5">
                 <input type="hidden" name="utf8" id="" placeholder="" autocomplete="" value="✓">
-                <input class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
+                <input class="form-control w-100" type="search" id="inputSearch" placeholder="Search..." aria-label="Search">
             </form>
             <button type="button"
                 class="btn btn-primary shadow-none font-weight-bold mx-2 text-nowrap d-none d-md-block ml-lg-5" id="newPost" data-toggle="modal" data-dismiss="modal" data-target="#writePost">Write a
